--- a/package.json
+++ b/package.json
@@ -28,6 +28,9 @@
     "chokidar": "^3.4.2",
     "enzyme": "^3.11.0",
     "express": "^4.17.1",
+    "faker": "^5.1.0",
+    "fs": "0.0.1-security",
+    "pg": "^8.4.1",
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1",
