--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "express": "^4.17.1",
     "faker": "^5.1.0",
     "fs": "0.0.1-security",
+    "newrelic": "^6.13.2",
     "nodemon": "^2.0.6",
     "pg": "^8.4.1",
     "react": "^16.13.1",
@@ -43,6 +44,7 @@
     "@babel/core": "^7.11.6",
     "@babel/preset-env": "^7.11.5",
     "@babel/preset-react": "^7.10.4",
+    "artillery": "^1.6.1",
     "babel-jest": "^26.3.0",
     "babel-loader": "^8.1.0",
     "enzyme-adapter-react-16": "^1.15.5",
